store/store-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-deploymernt
  labels:
    app: store
spec:
  replicas: 3
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: store
        image: 69323/store
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
