store/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-svc
  labels:
    app: store
    service: store-svc
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: store
